argo-apps/kiali.yml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - "kiali.example.com"
  gateways:
  - istio-gateway # Name of the gateway created in the previous step
  http:
  - route:
    - destination:
        host: kaili.istio-system.svc.cluster.local # replace with your service FQDN
        port:
          number: 20001 # replace with your service port
